--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,12 @@
 @use './page';
 @use './header';
 @use './main';
+@use './promo';
+@use './overview';
+@use './opportunities';
+@use './approach';
+
+
 // @use './title-block';
 // @use './strategy';
 // @use './criteria';
