--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -1,40 +1,41 @@
 .page { 
   position: relative;
-  &::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    width: 100vw;
+  background: #010855;
+  // &::after {
+  //   content: '';
+  //   position: absolute;
+  //   top: 0;
+  //   bottom: 0;
+  //   width: 100vw;
   
-    background-image:  
-      linear-gradient(180.08deg, #041351 12.88%, #2384D7 28.28%, #0C356C 44.97%, #030B2E 50%); 
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: scroll;
-    background-size: 100vw 100%;
-    z-index: -2;
+  //   background-image:  
+  //     linear-gradient(180.08deg, #041351 12.88%, #2384D7 28.28%, #0C356C 44.97%, #030B2E 50%); 
+  //   background-repeat: no-repeat;
+  //   background-position: center center;
+  //   background-attachment: scroll;
+  //   background-size: 100vw 100%;
+  //   z-index: -2;
     
-  }
-  &::before {
+  // }
+  // &::before {
 
-    content: '';
-    position: fixed;
+  //   content: '';
+  //   position: fixed;
   
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+  //   top: 0;
+  //   left: 0;
+  //   width: 100%;
+  //   height: 100%;
   
-      background-image:  
-      /* linear-gradient(180.24deg, rgba(0, 7, 84, 1) 20.51%, rgba(1, 54, 77, 0) 80.64%, rgba(0, 7, 84, 1) 100%); */
-      linear-gradient(180.24deg, rgba(0, 7, 84, 1) 12.51%, rgba(1, 54, 77, 0) 26.64%, rgba(0, 7, 84, 1) 100%); 
+  //     background-image:  
+  //     /* linear-gradient(180.24deg, rgba(0, 7, 84, 1) 20.51%, rgba(1, 54, 77, 0) 80.64%, rgba(0, 7, 84, 1) 100%); */
+  //     linear-gradient(180.24deg, rgba(0, 7, 84, 1) 12.51%, rgba(1, 54, 77, 0) 26.64%, rgba(0, 7, 84, 1) 100%); 
   
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    z-index: -1;
-  }
+  //   background-repeat: no-repeat;
+  //   background-size: cover;
+  //   background-attachment: fixed;
+  //   z-index: -1;
+  // }
   &__container {
 
     margin: 0 auto;
@@ -62,6 +63,23 @@
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
   }
+  &__block-separator {
+    position: relative;
+  }
+}
+
+.page__title {
+  padding: 0;
+  margin: 0;
+  &--h2 {
+    font-family: 'Rubik', Arial, sans-serif;
+    font-size: 50px;
+    line-height: 120%;
+    font-weight: 700;
+    background: linear-gradient(89.99deg, #B7936E -4.28%, #FBF0D7 39.09%, #B7936E 90.78%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+  }
 }
 
 .separator {
@@ -69,30 +87,46 @@
   padding: 0;
   border: none;
   height: 1px;
-  background-image: -webkit-gradient(linear, left top, right top, from(#195FB1), color-stop(50%, rgba(11, 40, 75, 0)));
-  background-image: -o-linear-gradient(left, #195FB1 0%, rgba(11, 40, 75, 0) 50%);
-  background-image: linear-gradient(90deg, #195FB1 0%, rgba(11, 40, 75, 0) 50%);
+  background-image:  linear-gradient(90deg, #195FB1 0%, rgba(11, 40, 75, 0) 100%);
   background-repeat: no-repeat;
   background-size: 100% 1px;
-  position: relative;
-  &::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 266px;
-    height: 150px;
-    background-image: url(../images/block_separator_img.png);
-    background-repeat: no-repeat;
-    background-size: 100% 70%;
-    -webkit-transform: translate(50%, -50%);
-        -ms-transform: translate(50%, -50%);
-            transform: translate(50%, -50%);
-    top: 22px;
-    left: 0;
+  &--right {
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 266px;
+      height: 150px;
+      background-image: url(../images/block_separator_img.png);
+      background-repeat: no-repeat;
+      background-size: 100% 70%;
+      transform: translate(50%, -50%);
+      top: 65%;
+      right: 20%;
+      opacity: 0.8;
+    }
   }
-  &_mobile {
-    display: none;
+
+  &--left {
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      width: 266px;
+      height: 150px;
+      background-image: url(../images/block_separator_img.png);
+      background-repeat: no-repeat;
+      background-size: 100% 70%;
+      transform: translate(50%, -50%);
+      top: 65%;
+      left: 0;
+      opacity: 0.8;
+    }
   }
+  
+  // &_mobile {
+  //   display: none;
+  // }
 }
 
 @media screen and (max-width: 2082px) {
@@ -102,21 +136,21 @@
 }
 
 @media screen and (max-width: 768px) {
-  .separator {
-    display: none; 
-    &_mobile {
-      display: block;
-      max-width: 390px;
-      width: 120%;
-      -o-object-fit: contain;
-         object-fit: contain;
-      margin: 10px 0 40px;
-      -ms-flex-item-align: center;
-          -ms-grid-row-align: center;
-          align-self: center;
-      opacity: 0.7;
-    }  
-  }
+  // .separator {
+  //   display: none; 
+  //   &_mobile {
+  //     display: block;
+  //     max-width: 390px;
+  //     width: 120%;
+  //     -o-object-fit: contain;
+  //        object-fit: contain;
+  //     margin: 10px 0 40px;
+  //     -ms-flex-item-align: center;
+  //         -ms-grid-row-align: center;
+  //         align-self: center;
+  //     opacity: 0.7;
+  //   }  
+  // }
 }
 
 @media screen and (max-width: 500px) {
