--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -79,6 +79,15 @@
     background: linear-gradient(89.99deg, #B7936E -4.28%, #FBF0D7 39.09%, #B7936E 90.78%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    &-uppercase {
+      text-transform: uppercase;
+    }
+    & sup {
+      font-size: 60%;
+      background: #FBF0D7;
+      -webkit-text-fill-color: transparent;
+      -webkit-background-clip: text;
+    }
   }
 }
 
