--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,7 +8,8 @@
 @use './opportunities';
 @use './approach';
 @use './tera-complex';
-
+@use './tera-ultra';
+@use './dosage';
 
 
 // @use './title-block';
