--- a/src/scss/_overview.scss
+++ b/src/scss/_overview.scss
@@ -7,6 +7,13 @@
     grid-template-columns: 41% 683px;
     column-gap: 25px;
     margin: 40px 0 80px;
+    @media screen and (max-width: 1300px) {
+      grid-template-columns: 1fr 1fr;
+    }
+    @media screen and (max-width: 690px) {
+      grid-template-columns: 1fr;
+      margin-bottom: 40px;
+    }
   }
   &__img {
     width: 100%;
@@ -41,6 +48,20 @@
         background-size: 100% 100%;
         opacity: 0.5;
       }
+      @media screen and (max-width: 1300px) {
+        grid-row: 2;
+        grid-column: 1 / 2;
+      }
+      @media screen and (max-width: 690px) {
+        grid-row: 2;
+        grid-column: 1;
+        justify-self: center;
+        margin-bottom: 15px;
+        &::before,
+        &::after {
+          display: none;
+        }
+      }
     }
   }
   &__description {
@@ -67,6 +88,17 @@
       mask-composite: exclude;
       z-index: -1;
     }
+    @media screen and (max-width: 1300px) {
+      grid-row: 1;
+      grid-column: 1 / 3;
+    }
+    @media screen and (max-width: 690px) {
+      grid-row: 1;
+      grid-column: 1;
+      margin-bottom: 15px;
+      flex-direction: column;
+      padding: 20px 12px;
+    }
   }
   &__icon {
     width: 70px;
@@ -92,7 +124,18 @@
         width: 120%;
         height: 120%;
         filter: blur(20px);
+        @media screen and (max-width: 690px) {
+          top: 50%;
+        }
       }
+      @media screen and (max-width: 690px) {
+        width: 47px;
+        height: 47px;
+      }
+    }
+    @media screen and (max-width: 690px) {
+      width: 47px;
+      margin-top: 0;
     }
   }
   &__text {
@@ -110,6 +153,19 @@
     display: grid;
     grid-template-columns: 350px 330px;
     gap: 25px 10px;
+    @media screen and (max-width: 1300px) {
+      grid-row: 2;
+      grid-column: 2 / 3;
+      grid-template-columns: 1fr;
+    }
+    @media screen and (max-width: 690px) {
+      grid-row: 3;
+      grid-column: 1;
+      gap: 10px;
+    }
+    @media screen and (max-width: 500px) {
+      margin-right: 30px;
+    }
   }
   &__item {
     display: flex;
@@ -118,7 +174,7 @@
     gap: 15px;
     align-self: self-start;
     &-img {
-      max-width: 50px;
+      max-width: 57px;
       width: 100%;
       object-fit: cover;
     }
@@ -130,6 +186,12 @@
       padding: 0;
       margin: 0;
       color: #FFFFFF;
+      @media screen and (max-width: 690px) {
+        font-size: 18px;
+      }
+      @media screen and (max-width: 500px) {
+        font-size: 16px;
+      }
     }
     &:nth-child(2) {
       grid-column: 1;
@@ -146,9 +208,19 @@
     border-radius: 20px;
     width: 100%;
     box-sizing: border-box;
+    @media screen and (max-width: 690px) {
+      padding: 15px;
+      gap: 10px;
+    }
     &-img {
       width: 80px;
       object-fit: contain;
+      @media screen and (max-width: 690px) {
+        width: 50px;
+      }
+      @media screen and (max-width: 500px) {
+        width: 40px;
+      }
     }
     &-text {
       font-family: 'Rubik', Arial, sans-serif;
