--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -11,7 +11,12 @@
     padding: 43px 25px 20px;
     display: flex;
     flex-direction: column;
-    // gap: 80px;
+    @media screen and (max-width: 768px) {
+      padding: 43px 20px 20px;
+    }
+    @media screen and (max-width: 500px) {
+      padding: 43px 12px 20px;
+    }
   }
 }
 
