--- a/src/scss/_tera-complex.scss
+++ b/src/scss/_tera-complex.scss
@@ -8,6 +8,13 @@
     row-gap: 20px;
     column-gap: 25x;
     margin-bottom: 80px;
+    @media screen and (max-width: 1150px) {
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 15px;
+    }
+    @media screen and (max-width: 1150px) {
+      grid-template-columns: 1fr 1fr;
+    }
   }
   &__item {
     display: flex;
@@ -18,6 +25,12 @@
       width: 117px;
       object-fit: cover;
       margin-bottom: 16px;
+      @media screen and (max-width: 768px) {
+        width: 90px;
+      }
+      @media screen and (max-width: 500px) {
+        width: 87px;
+      }
     }
     &-heading {
       font-family: 'Rubik', Arial, sans-serif;
@@ -34,14 +47,63 @@
       font-weight: 400;
       padding: 0;
       margin: 0;
+      @media screen and (max-width: 768px) {
+        font-size: 16px;
+      }
+      @media screen and (max-width: 500px) {
+        font-size: 14px;
+      }
     }
     &:nth-child(2) {
       justify-self: center;
+    }
+    @media screen and (max-width: 1150px) {
+      &:nth-child(4) {
+        grid-row: 1;
+        grid-column: 1;
+      }
+      &:nth-child(1) {
+        grid-row: 1;
+        grid-column: 2;
+      }
+      &:nth-child(2) {
+        grid-row: 2;
+        grid-column: 1;
+        justify-self: start;
+      }
+      &:nth-child(3) {
+        grid-row: 2;
+        grid-column: 2;
+      }
+      &:nth-child(6) {
+        grid-row: 3;
+        grid-column: 1;
+      }
+    }
+    @media screen and (max-width: 600px) {
+      &:nth-child(6) {
+        grid-row: 3;
+        grid-column: 1 / 3;
+        max-width: 100%;   
+        flex-direction: row;     
+      }
     }
   }
   &__product {
     max-width: 490px;
     object-fit: cover;
+    @media screen and (max-width: 1150px) {
+      max-width: 100%;
+      align-self: center;
+    }
+    @media screen and (max-width: 1150px) {
+      grid-row: 3;
+      grid-column: 2;
+    }
+    @media screen and (max-width: 600px) {
+      grid-row: 4;
+      grid-column: 1 / 3;
+    }
   }
   &__formula {
     border-radius: 15px;
